--- a/style.css
+++ b/style.css
@@ -1,33 +1,38 @@
 @charset "utf8";
 
-.cabecera{
-    height: 55px;
-    margin-left: 0px;
-    margin-right: auto;
-    margin-top: 0px;
-    width: 90%;
-    float: left;
+#cabecera{
+    vertical-align:top;
+    height: 5vw;
+    margin: 0px;
+    width: 90vw;
+    display: inline-block;
+
     box-sizing:border-box;
+    background-color: #f1f1f1;
+
     
 }
 .titulo_principal{
+    display: inline-block;
+    margin-left: 50px;
     margin-top: auto;
-    margin-bottom: auto;
-    text-align: center;
+    margin-bottom: auto;;
     color:#070237;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', serif;
+    font-family:'Courier New', Courier, monospace;
     font-weight: bold;
-    font-size: 38px;
+    font-size: 4vw;
 }
 .foto_logo
 {
-    height: 55px;
-    width: 10%;
-    margin-top: 0%;
-    margin-right: 0px;
-    float: left;
+    vertical-align:top;
+    height: 5vw;
+    width: 10vw;
+    margin: 0;
+    /*right: 0;*/
     box-sizing:border-box;
     text-align: center;
+    background-color: #f1f1f1;
+    float: right;
 }
 
 .imagen_ucu{
@@ -37,48 +42,32 @@
 }
 .articulo{
     margin-top: 15px;
-    width: 95%;
-    height: 300px;   
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    height: 20%;   
     box-sizing:border-box;
     display: inline-block;
     border: 1px solid burlywood;
     background-color:antiquewhite;
-
 }
 .img_articulo{
     float: left;
-
+    width: 20%;
+    margin-left: 2%;
+    margin-top: 5%;
+    vertical-align: middle;
 }
-#img1{
- width: 300px;
- margin:3px 3px;
+.img_articulo img{
+ width: 90%;
+ margin:5px 5px;
  border: 1px solid burlywood;   
 }
-#img2{
-    width: 300px;
-    margin:3px 3px;
-    border: 1px solid burlywood
-}
-#img3{
-    width: 300px;
-    margin:3px 3px;
-    border: 1px solid burlywood
-}
+
 
 body{
     background-color:white;
     margin: 0px;
-}
-p{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 25px;
-    margin-top: 3px;
-
-}
-h2{
-    margin: 3px 0px;
-    text-align: center;
-    border-bottom: 1px solid burlywood;
 }
 
 footer{
@@ -86,4 +75,120 @@ footer{
     background-color: midnightblue;
     height: 10px;
     width: 100%;
+    display: inline-block;
+}
+.nav_bar{
+    /*vertical-align:top;
+    left: 0;
+    height: 100%;
+    width: 10%;
+    background-color: #f1f1f1;*/
+    
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 5%;
+    text-align: center;
+}
+.nav_bar .closebtn {
+    position: absolute;
+    top: -1vw;
+    right: 1vw;
+    font-size: 3vw;
+    margin-left: 5vw;
+  }
+
+.nav_bar a {
+    margin-top: 20%;
+    margin-bottom: 20%;
+    padding: 2% 5% 2% 5%;
+    text-decoration: none;
+    font-size: 1vw;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    height: 4vw;
+    text-align: center;
+    width: 90%;
+  }
+
+.nav_bar a:hover {
+    color: #000000;
+    background-color: antiquewhite;
+  }
+#nav_btn{
+    font-size: 3vw;
+    height: 2vw;
+    cursor: pointer;
+    margin-top: 1vw;
+    vertical-align:top;
+    text-align: center;
+    
+}
+
+
+#main{
+    transition: margin-left .5s;
+    /*padding: 16px;*/
+    text-align: center;
+    width: 100%;
+    margin: 0px;
+    display: inline-block;
+    vertical-align:top;
+}
+body {
+    font-family: "Lato", sans-serif;
+    transition: background-color .5s;
+  }
+
+div+h2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 3px 0px;
+    text-align: center;
+    border-bottom: 1px solid burlywood;
+    font-size: 100%;
+}
+.articulo p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    margin-top: 3px;
+}
+
+@media (width < 768px){
+.cabecera{
+    height: 30px;
+}
+.titulo_principal{
+    /*font-size: 2vw;*/
+    display: inline-block;
+    margin-left: 50px;
+    text-align: center;
+    color:#070237;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: bold;
+}
+div+h2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 3px 0px;
+    text-align: center;
+    border-bottom: 1px solid burlywood;
+    font-size: 15px;
+}
+.articulo p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 100%;
+    margin-top: 1px;
+    height: 80%;
+}
+.nav_bar a{
+    font-size: 70%;
+    padding: 1% 1% 1% 13%;
+}
+
 }
